# redmine-auto-svn

./: .env.example  .gitignore  pyproject.toml  readme.md
data/: repositorios.txt
src/redmine_auto_svn/: cli.py
src/redmine_auto_svn/services/: redmine_service.py  spinner.py  svn_service.py
